fixing formatting, navbar no longer sticks on smaller screen size

--- a/style.css
+++ b/style.css
@@ -196,6 +196,7 @@ img{
 		width: 100%;
 		flex-wrap: wrap;
         max-height:160px;
+        position:absolute;
     }
     .navbaritem{
         list-style-type: none;
@@ -294,6 +295,7 @@ img{
         order:3;
     }
     #plantbenefits_IMG{
+        margin-top:-80px;
         order:2;
     }
     #itemtwo{
